tests/errors/invalid_goto.bas
10 PRINT "Start"
20 GOTO 999
30 PRINT "End"